@@ -3,6 +3,7 @@ Changes to 1.0.2
 * Symbolic deriative of erf, yay!
 * @() works correctly with null as an empty range returning null (an empty
   matrix)
+* Saner switching to scientific notation for floating point output
 * Fix --disable-scrollkeep OMF file installation (Sebastian Dröge)
 * Fix .desktop file (Sebastian Dröge)
 * Fix extraneous space when prettyprinting fractions
