@@ -1,3 +1,8 @@
+Tue Nov 20 03:22:14 2007  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/mpwrap.c: saner algorithm to figure out when to print in
+	  scientific notation
+
 Tue Nov 20 02:33:03 2007  Jiri (George) Lebl <jirka@5z.com>
 
 	* configure.in: raise version
